--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://gabrieloliveira28.github.io/card-show/style.css" rel="stylesheet"/>
 </head>
 <body>
 
