--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Card</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://gabrieloliveira28.github.io/card-show/style.css" rel="stylesheet"/>
+    <script src="https://gabrieloliveira28.github.io/card-show/script.js"></script>
 </head>
 <body>
 
